objects/GenAIGtwyObjRecCitationRef__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>KQ_parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>references__c</fullName>
        <label>references</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>